from data_layer import DLAPI
from models import *


class LLDestinations:
    def __init__(self):
        dl_api = DLAPI()

    def validate_destination(self):
        pass

    def get_destination(self, destination_ID):
        pass

    def get_all_destinations(self):
        pass
